--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -1,6 +1,6 @@
-FROM openjdk:8-jdk-alpine
+FROM alpine
 
-RUN apk add --no-cache git openssh-client curl unzip bash ttf-dejavu coreutils tini docker
+RUN apk add --no-cache git openssh-client curl unzip bash ttf-dejavu coreutils tini docker openjdk11-jdk
 
 ARG user=jenkins
 ARG group=jenkins
