--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -60,6 +60,8 @@ EXPOSE ${agent_port}
 
 ENV COPY_REFERENCE_FILE_LOG $JENKINS_HOME/copy_reference_file.log
 
+HEALTHCHECK CMD curl --fail http://127.0.0.1:${http_port}/|| exit 1
+
 USER ${user}
 
 COPY jenkins-support /usr/local/bin/jenkins-support
