--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -38,7 +38,7 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          file: ./Dockerfile-alpine
           platforms: linux/amd64,linux/arm64
           build-args: |
            "JENKINS_VERSION=${{ env.JENKINS_VERSION }}"
