--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -28,6 +28,13 @@ jobs:
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }} 
+      -
+        name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.CR_PAT }}
       - name: Build
         run: chmod 755 publish.sh && make publish
       - name: Set up QEMU
@@ -46,6 +53,6 @@ jobs:
            "JENKINS_VERSION=${{ env.JENKINS_VERSION }}"
            "JENKINS_SHA=${{ env.JENKINS_SHA }}"
           push: true
-          tags: comdata456/jenkins:latest,comdata456/jenkins:${{ env.JENKINS_VERSION }}
+          tags: comdata456/jenkins:latest,comdata456/jenkins:${{ env.JENKINS_VERSION }},ghcr.io/comdata/jenkins:latest,ghcr.io/comdata/jenkins:${{ env.JENKINS_VERSION }}
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
